--- a/ContentDialog1.xaml
+++ b/ContentDialog1.xaml
@@ -10,71 +10,72 @@
     mc:Ignorable="d"
     Loaded="ContentDialog_Loaded"
     Title="About"
-    PrimaryButtonText="OK"
-    PrimaryButtonClick="ContentDialog_PrimaryButtonClick"
     CornerRadius="10">
-
-    <ScrollViewer>
-
     <Grid>
-        <Grid.ChildrenTransitions>
-            <TransitionCollection>
-                <EntranceThemeTransition IsStaggeringEnabled="True"/>
-            </TransitionCollection>
-        </Grid.ChildrenTransitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-        </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0">
-            <StackPanel.ChildrenTransitions>
+        <ScrollViewer Margin="0,0,0,40">
+
+        <Grid Margin="16,0,16,0">
+            <Grid.ChildrenTransitions>
                 <TransitionCollection>
                     <EntranceThemeTransition IsStaggeringEnabled="True"/>
                 </TransitionCollection>
-            </StackPanel.ChildrenTransitions>
-            <Image Width="100" Source="assets\Storelogo.png"/>
-            <TextBlock Style="{ThemeResource SubtitleTextBlockStyle}" HorizontalAlignment="Center" Text="KioskBox Display"/>
-            <TextBlock Style="{ThemeResource BodyTextBlockStyle}" HorizontalAlignment="Center" x:Name="txtVersion" Text="version 0.0.0"/>
-            <TextBlock HorizontalAlignment="Center">© 2021-2022 ItzBluebxrry</TextBlock>
-            <TextBlock HorizontalAlignment="Center" TextWrapping="WrapWholeWords" Text="KioskBox display is a multipurpose digital display&#10;app which aims for a more flexible customizations."/>
-        </StackPanel>
-        <muxc:Expander IsExpanded="True" Grid.Row="1" Margin="0,15,0,0" HorizontalAlignment="Stretch" Header="List of Contributors" HorizontalContentAlignment="Left">
+            </Grid.ChildrenTransitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+            </Grid.RowDefinitions>
+            <StackPanel Grid.Row="0">
+                <StackPanel.ChildrenTransitions>
+                    <TransitionCollection>
+                        <EntranceThemeTransition IsStaggeringEnabled="True"/>
+                    </TransitionCollection>
+                </StackPanel.ChildrenTransitions>
+                <Image Width="100" Source="assets\StoreLogo.scale-400.png"/>
+                <TextBlock Style="{ThemeResource SubtitleTextBlockStyle}" HorizontalAlignment="Center" Text="KioskBox Display"/>
+                <TextBlock Style="{ThemeResource BodyTextBlockStyle}" HorizontalAlignment="Center" x:Name="txtVersion" Text="version 0.0.0"/>
+                <TextBlock HorizontalAlignment="Center">© 2021-2022 ItzBluebxrry</TextBlock>
+                <TextBlock HorizontalAlignment="Center" TextWrapping="WrapWholeWords" Text="KioskBox display is a multipurpose digital display&#10;app which aims for a more flexible customizations."/>
+            </StackPanel>
+            <muxc:Expander IsExpanded="True" Grid.Row="1" Margin="0,15,0,0" HorizontalAlignment="Stretch" Header="List of Contributors" HorizontalContentAlignment="Left">
                 <ScrollViewer HorizontalScrollMode="Enabled">
-            <Grid>
-                <StackPanel Orientation="Horizontal">
-                        <Button x:Name="bluebxrry" Click="bluebxrry_Click" Height="150" Width="120">
-                            <StackPanel HorizontalAlignment="Center">
-                                <Image Source="Assets\bx-dev.png" Width="70"/>
-                                <TextBlock Text="ItzBluebxrry" Margin="0,5" FontWeight="SemiBold" FontSize="16"/>
-                                <TextBlock TextAlignment="Center">Developer</TextBlock>
-                            </StackPanel>
-                        </Button>
-                        <Button Height="150" Width="120" Margin="10,0">
-                            <StackPanel HorizontalAlignment="Center">
-                                <SymbolIcon Symbol="AddFriend"/>
-                                <TextBlock TextAlignment="Center" TextWrapping="WrapWholeWords" Text="Register as a contributor!" Margin="0,5" FontWeight="SemiBold" FontSize="14"/>
-                                
-                            </StackPanel>
-                        </Button>
-                    </StackPanel>
-            </Grid>
-            </ScrollViewer>
+                    <Grid>
+                        <StackPanel Orientation="Horizontal">
+                            <Button x:Name="bluebxrry" Click="bluebxrry_Click" Height="150" Width="120">
+                                <StackPanel HorizontalAlignment="Center">
+                                    <Image Source="Assets\bx-dev.png" Width="70"/>
+                                    <TextBlock Text="ItzBluebxrry" Margin="0,5" FontWeight="SemiBold" FontSize="16"/>
+                                    <TextBlock TextAlignment="Center">Developer</TextBlock>
+                                </StackPanel>
+                            </Button>
+                            <Button Height="150" Width="120" Margin="10,0">
+                                <StackPanel HorizontalAlignment="Center">
+                                    <SymbolIcon Symbol="AddFriend"/>
+                                    <TextBlock TextAlignment="Center" TextWrapping="WrapWholeWords" Text="Register as a contributor!" Margin="0,5" FontWeight="SemiBold" FontSize="14"/>
+
+                                </StackPanel>
+                            </Button>
+                        </StackPanel>
+                    </Grid>
+                </ScrollViewer>
             </muxc:Expander>
-        <muxc:Expander Grid.Row="2" Margin="0,5,0,0" HorizontalAlignment="Stretch" Header="Addtional links" HorizontalContentAlignment="Center">
-            <Grid>
-                <StackPanel>
-                    <StackPanel Orientation="Horizontal">
-                        <HyperlinkButton NavigateUri="https://github.com/itzbluebxrry/Al-Mathurat-UWP" Content="Github"/>
-                        <HyperlinkButton NavigateUri="https://docs.microsoft.com/en-us/windows/uwp/get-started/universal-application-platform-guide" Content="What is UWP?"/>
+            <muxc:Expander Grid.Row="2" Margin="0,5,0,0" HorizontalAlignment="Stretch" Header="Addtional links" HorizontalContentAlignment="Center">
+                <Grid>
+                    <StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <HyperlinkButton NavigateUri="https://github.com/itzbluebxrry/Al-Mathurat-UWP" Content="Github"/>
+                            <HyperlinkButton NavigateUri="https://docs.microsoft.com/en-us/windows/uwp/get-started/universal-application-platform-guide" Content="What is UWP?"/>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <HyperlinkButton NavigateUri="https://home.itzbluebxrry.ml/" Content="Website"/>
+                            <HyperlinkButton NavigateUri="https://youtube.com/c/ItzBluebxrry?sub_confirmation=1" Content="YouTube"/>
+                        </StackPanel>
                     </StackPanel>
-                    <StackPanel Orientation="Horizontal">
-                        <HyperlinkButton NavigateUri="https://home.itzbluebxrry.ml/" Content="Website"/>
-                        <HyperlinkButton NavigateUri="https://youtube.com/c/ItzBluebxrry?sub_confirmation=1" Content="YouTube"/>
-                    </StackPanel>
-                </StackPanel>
-            </Grid>
-        </muxc:Expander>
-    </Grid>
+                </Grid>
+            </muxc:Expander>
+        </Grid>
     </ScrollViewer>
+        <Button x:Name="done" Click="done_Click" Content="OK" VerticalAlignment="Bottom"
+                HorizontalAlignment="Right" Width="150" Margin="16,20,16,0" Style="{ThemeResource AccentButtonStyle}"/>
+    </Grid>
 </ContentDialog>
